# MCPP2017

./: .appveyor.yml  .travis.yml  CMakeLists.txt  Doxyfile.in
.appveyor/: boost.ps1  openssl.ps1  zlib.ps1
.travis/: boost.sh  cmake.sh
cmake/modules/: FindBeast.cmake  FindCatch.cmake  FindExpected.cmake  FindMParkVariant.cmake  FindOptional.cmake  FindRapidJSON.cmake
include/mcpp/: buffer.hpp  buffer_iterator.hpp  checked.hpp  log.hpp  log_level.hpp  null_log.hpp  optional.hpp  pointer_ops.hpp  polymorphic_ptr.hpp  stream_log.hpp
include/mcpp/iostreams/: counting_filter.hpp  limiting_source.hpp  offset.hpp  proxy_sink.hpp  proxy_source.hpp
include/mcpp/protocol/: checked.hpp  direction.hpp  error.hpp  error_code.hpp  exception.hpp  handshaking.hpp  incremental_varint_parser.hpp  int.hpp  packet_id.hpp  packet_serializer.hpp  packet_serializer_map.hpp  packet_serializer_map_t.hpp  parameterized_packet_serializer.hpp  parameterized_serializer_base.hpp  serializer.hpp  serializer_base.hpp  serializer_map.hpp  state.hpp  stream_serializer.hpp  string.hpp  typed_packet_serializer.hpp  varint.hpp
include/mcpp/test/: allocator.hpp
src/: CMakeLists.txt
src/mcpp/: CMakeLists.txt  async.cpp  dummy.cpp  log.cpp  log_level.cpp  null_log.cpp  stream_log.cpp
src/mcpp/include/mcpp/: allocate_unique.hpp  async.hpp  buffer.hpp  checked.hpp  enum_hash.hpp  log.hpp  optional.hpp  polymorphic_ptr.hpp  stream_log.hpp  type_traits.hpp  variant.hpp
src/mcpp/iostreams/tests/: CMakeLists.txt  offset.cpp  proxy_sink.cpp  traits.cpp
src/mcpp/protocol/: CMakeLists.txt  error.cpp  error_code.cpp  exception.cpp  packet_id.cpp  state.cpp
src/mcpp/protocol/tests/: CMakeLists.txt  incremental_varint_parser.cpp  int.cpp  packet_serializer_map.cpp  serializer_map.cpp  stream_serializer.cpp
src/mcpp/test/: CMakeLists.txt  log.cpp  stream_log.cpp
src/mcpp/tests/: CMakeLists.txt  allocate_unique.cpp  async.cpp  checked.cpp  log.cpp  optional.cpp  polymorphic_ptr.cpp  stream_log.cpp
src/mcpp_iostreams/: CMakeLists.txt
src/mcpp_iostreams/include/mcpp/iostreams/: concatenating_source.hpp  limiting_source.hpp  offset.hpp  proxy_sink.hpp  traits.hpp
src/mcpp_iostreams/tests/: CMakeLists.txt  concatenating_source.cpp  counting_filter.cpp  limiting_source.cpp  proxy_source.cpp
src/mcpp_protocol/: CMakeLists.txt  direction.cpp  packet.cpp  packet_id.cpp
src/mcpp_protocol/include/mcpp/protocol/: checked.hpp  direction.hpp  error.hpp  exception.hpp  handshaking.hpp  incremental_varint_parser.hpp  int.hpp  packet.hpp  packet_id.hpp  packet_parameters.hpp  packet_serializer.hpp  packet_serializer_map.hpp  packet_serializer_map_t.hpp  state.hpp  stream_serializer.hpp  string.hpp  varint.hpp
src/mcpp_protocol/tests/: CMakeLists.txt  handshaking.cpp  string.cpp  varint.cpp
src/mcpp_test/: CMakeLists.txt  allocator.cpp  object.cpp
src/mcpp_test/include/mcpp/test/: allocator.hpp  object.hpp
src/mcpp_yggdrasil/: CMakeLists.txt  agent.cpp  authenticate.cpp  error.cpp  http.cpp  invalidate.cpp  json.cpp  profile.cpp  refresh.cpp  signout.cpp  user.cpp  validate.cpp
src/mcpp_yggdrasil/include/mcpp/yggdrasil/: agent.hpp  authenticate.hpp  error.hpp  http.hpp  invalidate.hpp  json.hpp  profile.hpp  refresh.hpp  signout.hpp  user.hpp  validate.hpp
src/mcpp_yggdrasil/tests/: CMakeLists.txt  config.hpp.in  http.cpp  json.cpp
