cmake_minimum_required(VERSION 3.1.3 FATAL_ERROR)
project(mcpp LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED 1)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
find_package(Boost 1.58.0 REQUIRED)
find_package(Catch REQUIRED)
find_package(Expected REQUIRED)
find_package(Threads REQUIRED)
include_directories(include ${Boost_INCLUDE_DIRS} ${EXPECTED_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIRS})
enable_testing()
add_subdirectory(src)
