cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(mcpp LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED 1)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
find_package(Beast REQUIRED)
find_package(Boost 1.58.0 REQUIRED iostreams system)
add_library(Asio INTERFACE)
target_link_libraries(Asio INTERFACE Boost::boost Boost::system)
if(WIN32)
	target_link_libraries(Asio INTERFACE wsock32 ws2_32)
endif()
find_package(Catch REQUIRED)
find_package(Doxygen)
find_package(Expected REQUIRED)
find_package(MParkVariant REQUIRED)
find_package(RapidJSON REQUIRED)
find_package(Threads REQUIRED)
find_package(ZLIB REQUIRED)
enable_testing()
add_subdirectory(src)
if(DOXYGEN_FOUND)
	if(DOXYGEN_DOT_FOUND)
		set(DOXYGEN_CONFIGURE_HAVE_DOT "HAVE_DOT=YES")
		get_filename_component(DOXYGEN_DOT_PATH "${DOXYGEN_DOT_EXECUTABLE}" DIRECTORY)
		file(TO_NATIVE_PATH "${DOXYGEN_DOT_PATH}" DOXYGEN_DOT_PATH)
		set(DOXYGEN_CONFIGURE_DOT_PATH "DOT_PATH=${DOXYGEN_DOT_PATH}")
	endif()
	configure_file(Doxyfile.in ${CMAKE_BINARY_DIR}/Doxyfile)
	add_custom_target(doc
		${DOXYGEN_EXECUTABLE}
		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
		COMMENT "Running Doxygen" VERBATIM
	)
endif()
