add_library(mcpp_yggdrasil SHARED
	agent.cpp
	authenticate.cpp
	error.cpp
	http.cpp
	json.cpp
	profile.cpp
	refresh.cpp
	user.cpp
	validate.cpp
)
target_include_directories(mcpp_yggdrasil
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(mcpp_yggdrasil
	PUBLIC
		mcpp
		Asio
		Beast
		Boost::boost
		Boost::system
		Expected
	PRIVATE
		RapidJSON
)
add_subdirectory(tests)
